--- a/.github/workflows/docker-image-amd64.yml
+++ b/.github/workflows/docker-image-amd64.yml
@@ -19,10 +19,13 @@ jobs:
     steps:
       - name: Check out the repo
         uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+          fetch-tags: true
 
       - name: Save version info
         run: |
-          git describe --tags > VERSION 
+          git describe --tags --always > VERSION 
 
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
