--- a/.github/workflows/macos-release.yml
+++ b/.github/workflows/macos-release.yml
@@ -23,7 +23,7 @@ jobs:
         run: |
           cd web
           npm install
-          REACT_APP_VERSION=$(git describe --tags) npm run build
+          REACT_APP_VERSION=$(git describe --tags --always) npm run build
           cd ..
       - name: Set up Go
         uses: actions/setup-go@v3
@@ -32,7 +32,7 @@ jobs:
       - name: Build Backend
         run: |
           go mod download
-          go build -ldflags "-X 'message-pusher/common.Version=$(git describe --tags)'" -o message-pusher-macos
+          go build -ldflags "-X 'message-pusher/common.Version=$(git describe --tags --always)'" -o message-pusher-macos
       - name: Release
         uses: softprops/action-gh-release@v1
         if: startsWith(github.ref, 'refs/tags/')
