--- a/.github/workflows/windows-release.yml
+++ b/.github/workflows/windows-release.yml
@@ -26,7 +26,7 @@ jobs:
         run: |
           cd web
           npm install
-          REACT_APP_VERSION=$(git describe --tags) npm run build
+          REACT_APP_VERSION=$(git describe --tags --always) npm run build
           cd ..
       - name: Set up Go
         uses: actions/setup-go@v3
@@ -35,7 +35,7 @@ jobs:
       - name: Build Backend
         run: |
           go mod download
-          go build -ldflags "-s -w -X 'message-pusher/common.Version=$(git describe --tags)'" -o message-pusher.exe
+          go build -ldflags "-s -w -X 'message-pusher/common.Version=$(git describe --tags --always)'" -o message-pusher.exe
       - name: Release
         uses: softprops/action-gh-release@v1
         if: startsWith(github.ref, 'refs/tags/')
