--- a/.github/workflows/docker-image-amd64.yml
+++ b/.github/workflows/docker-image-amd64.yml
@@ -45,7 +45,7 @@ jobs:
         uses: docker/metadata-action@v4
         with:
           images: |
-            justsong/message-pusher
+            zimonianhua/message-pusher
             ghcr.io/${{ github.repository }}
 
       - name: Build and push Docker images
